Owo库无异常，Item类为异常产生源头

--- a/src/main/resources/assets/timaviciix-ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix-ebm/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.timaviciix-ebm-group": "Timaviciix's Easy Book Management",
   "item.timaviciix-ebm.classic_journal_book": "Classic Journal Book",
   "item.timaviciix_ebm.refined_leather_book": "Refined Leather Book",
   "item.timaviciix_ebm.luxurious_gilded_book": "Luxurious Gilded Book",
