Owo库版本匹配有误，已解决

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "item.timaviciix-ebm-group": "Timaviciix's Easy Book Management",
-  "item.timaviciix-ebm.classic_journal_book": "Classic Journal Book",
+  "itemGroup.timaviciix_ebm.timaviciix_ebm_group": "Timaviciix's Easy Book Management",
+  "item.timaviciix_ebm.classic_journal_book": "Classic Journal Book",
   "item.timaviciix_ebm.refined_leather_book": "Refined Leather Book",
   "item.timaviciix_ebm.luxurious_gilded_book": "Luxurious Gilded Book",
   "item.timaviciix_ebm.quartz_gilded_book": "Quartz Gilded Book",
