--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -1,8 +1,9 @@
 {
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group": "Timaviciix's Easy Book Management",
+  "itemGroup.timaviciix_ebm.timaviciix_ebm_group.button.github": "Visit EBM GitHub!",
   "item.timaviciix_ebm.classic_journal_book": "Classic Journal Book",
-  "item.timaviciix_ebm.classic_journal_book_desc": "Classic Type",
   "item.timaviciix_ebm.refined_leather_book": "Refined Leather Book",
+  "item.timaviciix_ebm.quartz_leather_book": "Quartz Leather Book",
   "item.timaviciix_ebm.luxurious_gilded_book": "Luxurious Gilded Book",
   "item.timaviciix_ebm.quartz_gilded_book": "Quartz Gilded Book",
   "item.timaviciix_ebm.sturdy_obsidian_gilded_book": "Sturdy Obsidian Gilded Book",
