书本item素材导入与注册完成

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -12,5 +12,16 @@
   "item.timaviciix_ebm.sapphire_gilded_book": "Sapphire Gilded Book",
   "item.timaviciix_ebm.ruby_gilded_book": "Ruby Gilded Book",
   "item.timaviciix_ebm.golden_bough_forest_book": "Golden Bough Forest Book",
-  "item.timaviciix_ebm.crimson_flame_gilded_book": "Crimson Flame Gilded Book"
+  "item.timaviciix_ebm.crimson_flame_gilded_book": "Crimson Flame Gilded Book",
+  "item.timaviciix_ebm.refined_leather_bookcase": "Refined Leather Bookcase",
+  "item.timaviciix_ebm.quartz_leather_bookcase": "Quartz Leather Bookcase",
+  "item.timaviciix_ebm.luxurious_gilded_bookcase": "Luxurious Gilded Bookcase",
+  "item.timaviciix_ebm.quartz_gilded_bookcase": "Quartz Gilded Bookcase",
+  "item.timaviciix_ebm.sturdy_obsidian_gilded_bookcase": "Sturdy Obsidian Gilded Bookcase",
+  "item.timaviciix_ebm.majestic_gilded_bookcase": "Majestic Gilded Bookcase",
+  "item.timaviciix_ebm.quartz_ruby_encrusted_bookcase": "Quartz Ruby Encrusted Bookcase",
+  "item.timaviciix_ebm.sapphire_gilded_bookcase": "Sapphire Gilded Bookcase",
+  "item.timaviciix_ebm.ruby_gilded_bookcase": "Ruby Gilded Bookcase",
+  "item.timaviciix_ebm.golden_bough_forest_bookcase": "Golden Bough Forest Bookcase",
+  "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "Crimson Flame Gilded Bookcase"
 }
