--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -12,5 +12,16 @@
   "item.timaviciix_ebm.sapphire_gilded_book": "蓝晶金辉书典",
   "item.timaviciix_ebm.ruby_gilded_book": "赤宝金辉书典",
   "item.timaviciix_ebm.golden_bough_forest_book": "金枝密林书册",
-  "item.timaviciix_ebm.crimson_flame_gilded_book": "赤焰金边书册"
+  "item.timaviciix_ebm.crimson_flame_gilded_book": "赤焰金边书册",
+  "item.timaviciix_ebm.refined_leather_bookcase": "精致皮革书套",
+  "item.timaviciix_ebm.quartz_leather_bookcase": "精致石英书套",
+  "item.timaviciix_ebm.luxurious_gilded_bookcase": "精致金边书套",
+  "item.timaviciix_ebm.quartz_gilded_bookcase": "石晶金边书套",
+  "item.timaviciix_ebm.sturdy_obsidian_gilded_bookcase": "曜石金边书套",
+  "item.timaviciix_ebm.majestic_gilded_bookcase": "坤舆金乌书壳",
+  "item.timaviciix_ebm.quartz_ruby_encrusted_bookcase": "玛瑙石晶书壳",
+  "item.timaviciix_ebm.sapphire_gilded_bookcase": "蓝晶金辉书壳",
+  "item.timaviciix_ebm.ruby_gilded_bookcase": "赤宝金辉书壳",
+  "item.timaviciix_ebm.golden_bough_forest_bookcase": "金枝密林书皮",
+  "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "赤焰金边书皮"
 }
