拟采用AutoRegister完成item自动注册

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group": "Timaviciix's Easy Book Management",
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group.button.github": "Visit EBM GitHub!",
   "item.timaviciix_ebm.classic_journal_book": "Classic Journal Book",
+  "item.timaviciix_ebm.cut_size_book_paper": "Cut Size Book Paper",
   "item.timaviciix_ebm.refined_leather_book": "Refined Leather Book",
   "item.timaviciix_ebm.quartz_leather_book": "Quartz Leather Book",
   "item.timaviciix_ebm.luxurious_gilded_book": "Luxurious Gilded Book",
