--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -2,6 +2,7 @@
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group": "TIMAVICIIX的简单图书管理",
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group.button.github": "访问模组主页!",
   "item.timaviciix_ebm.classic_journal_book": "经典期刊本",
+  "item.timaviciix_ebm.cut_size_book_paper": "裁版书纸",
   "item.timaviciix_ebm.refined_leather_book": "精致皮革书本",
   "item.timaviciix_ebm.quartz_leather_book": "精致石英书本",
   "item.timaviciix_ebm.luxurious_gilded_book": "精致金边书本",
