引入了dataGen功能

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -24,5 +24,7 @@
   "item.timaviciix_ebm.sapphire_gilded_bookcase": "Sapphire Gilded Bookcase",
   "item.timaviciix_ebm.ruby_gilded_bookcase": "Ruby Gilded Bookcase",
   "item.timaviciix_ebm.golden_bough_forest_bookcase": "Golden Bough Forest Bookcase",
-  "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "Crimson Flame Gilded Bookcase"
+  "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "Crimson Flame Gilded Bookcase",
+  "item.timaviciix_ebm.portable_copier": "Portable Copier",
+  "item.timaviciix_ebm.vertical_copier": "Vertical Copier"
 }
