--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -26,5 +26,14 @@
   "item.timaviciix_ebm.golden_bough_forest_bookcase": "Golden Bough Forest Bookcase",
   "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "Crimson Flame Gilded Bookcase",
   "item.timaviciix_ebm.portable_copier": "Portable Copier",
-  "item.timaviciix_ebm.vertical_copier": "Vertical Copier"
+  "item.timaviciix_ebm.vertical_copier": "Vertical Copier",
+  "item.timaviciix_ebm.binding_machine": "Binding Machine",
+  "item.timaviciix_ebm.librarian_desk": "Librarian Desk",
+  "item.timaviciix_ebm.stamping_desk": "Stamping Desk",
+  "item.timaviciix_ebm.copier_body": "Copier Body",
+  "item.timaviciix_ebm.ink_box": "Ink Box",
+  "item.timaviciix_ebm.toner_cartridge": "Toner Cartridge",
+  "item.timaviciix_ebm.blue_cat_pendant": "Blue Cat Pendant",
+  "item.timaviciix_ebm.european_style_ceramic_tea_set": "European Style Ceramic Tea Set",
+  "item.timaviciix_ebm.feather_duster": "Feather Duster"
 }
