--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -26,5 +26,14 @@
   "item.timaviciix_ebm.golden_bough_forest_bookcase": "金枝密林书皮",
   "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "赤焰金边书皮",
   "item.timaviciix_ebm.portable_copier": "便携复印机",
-  "item.timaviciix_ebm.vertical_copier": "立式复印机"
+  "item.timaviciix_ebm.vertical_copier": "立式复印机",
+  "item.timaviciix_ebm.binding_machine": "装订器",
+  "item.timaviciix_ebm.librarian_desk": "图书管理员的书桌",
+  "item.timaviciix_ebm.stamping_desk": "签章台",
+  "item.timaviciix_ebm.copier_body": "复印机体",
+  "item.timaviciix_ebm.ink_box": "碳粉瓶",
+  "item.timaviciix_ebm.toner_cartridge": "硒鼓",
+  "item.timaviciix_ebm.blue_cat_pendant": "蓝色猫猫铃",
+  "item.timaviciix_ebm.european_style_ceramic_tea_set": "欧式陶瓷茶具套装",
+  "item.timaviciix_ebm.feather_duster": "鸡毛掸子"
 }
