--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -25,7 +25,7 @@
   "item.timaviciix_ebm.ruby_gilded_bookcase": "赤宝金辉书壳",
   "item.timaviciix_ebm.golden_bough_forest_bookcase": "金枝密林书皮",
   "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "赤焰金边书皮",
-  "item.timaviciix_ebm.portable_copier": "便携复印机",
+  "block.timaviciix_ebm.portable_copier": "便携复印机",
   "item.timaviciix_ebm.vertical_copier": "立式复印机",
   "item.timaviciix_ebm.binding_machine": "装订器",
   "item.timaviciix_ebm.librarian_desk": "图书管理员的书桌",
