带有朝向的Block放置成功，修改部分可放置Item到Block中

--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -26,7 +26,7 @@
   "item.timaviciix_ebm.golden_bough_forest_bookcase": "金枝密林书皮",
   "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "赤焰金边书皮",
   "block.timaviciix_ebm.portable_copier": "便携复印机",
-  "item.timaviciix_ebm.vertical_copier": "立式复印机",
+  "block.timaviciix_ebm.vertical_copier": "立式复印机",
   "item.timaviciix_ebm.binding_machine": "装订器",
   "item.timaviciix_ebm.librarian_desk": "图书管理员的书桌",
   "item.timaviciix_ebm.stamping_desk": "签章台",
