--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -1,19 +1,19 @@
 {
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group": "Timaviciix's Easy Book Management",
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group.button.github": "Visit EBM GitHub!",
-  "item.timaviciix_ebm.classic_journal_book": "Classic Journal Book",
-  "item.timaviciix_ebm.cut_size_book_paper": "Cut Size Book Paper",
-  "item.timaviciix_ebm.refined_leather_book": "Refined Leather Book",
-  "item.timaviciix_ebm.quartz_leather_book": "Quartz Leather Book",
-  "item.timaviciix_ebm.luxurious_gilded_book": "Luxurious Gilded Book",
-  "item.timaviciix_ebm.quartz_gilded_book": "Quartz Gilded Book",
-  "item.timaviciix_ebm.sturdy_obsidian_gilded_book": "Sturdy Obsidian Gilded Book",
-  "item.timaviciix_ebm.majestic_gilded_book": "Majestic Gilded Book",
-  "item.timaviciix_ebm.quartz_ruby_encrusted_book": "Quartz Ruby Encrusted Book",
-  "item.timaviciix_ebm.sapphire_gilded_book": "Sapphire Gilded Book",
-  "item.timaviciix_ebm.ruby_gilded_book": "Ruby Gilded Book",
-  "item.timaviciix_ebm.golden_bough_forest_book": "Golden Bough Forest Book",
-  "item.timaviciix_ebm.crimson_flame_gilded_book": "Crimson Flame Gilded Book",
+  "block.timaviciix_ebm.classic_journal_book": "Classic Journal Book",
+  "block.timaviciix_ebm.cut_size_book_paper": "Cut Size Book Paper",
+  "block.timaviciix_ebm.refined_leather_book": "Refined Leather Book",
+  "block.timaviciix_ebm.quartz_leather_book": "Quartz Leather Book",
+  "block.timaviciix_ebm.luxurious_gilded_book": "Luxurious Gilded Book",
+  "block.timaviciix_ebm.quartz_gilded_book": "Quartz Gilded Book",
+  "block.timaviciix_ebm.sturdy_obsidian_gilded_book": "Sturdy Obsidian Gilded Book",
+  "block.timaviciix_ebm.majestic_gilded_book": "Majestic Gilded Book",
+  "block.timaviciix_ebm.quartz_ruby_encrusted_book": "Quartz Ruby Encrusted Book",
+  "block.timaviciix_ebm.sapphire_gilded_book": "Sapphire Gilded Book",
+  "block.timaviciix_ebm.ruby_gilded_book": "Ruby Gilded Book",
+  "block.timaviciix_ebm.golden_bough_forest_book": "Golden Bough Forest Book",
+  "block.timaviciix_ebm.crimson_flame_gilded_book": "Crimson Flame Gilded Book",
   "item.timaviciix_ebm.refined_leather_bookcase": "Refined Leather Bookcase",
   "item.timaviciix_ebm.quartz_leather_bookcase": "Quartz Leather Bookcase",
   "item.timaviciix_ebm.luxurious_gilded_bookcase": "Luxurious Gilded Bookcase",
