--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -1,19 +1,19 @@
 {
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group": "TIMAVICIIX的简单图书管理",
   "itemGroup.timaviciix_ebm.timaviciix_ebm_group.button.github": "访问模组主页!",
-  "item.timaviciix_ebm.classic_journal_book": "经典期刊本",
-  "item.timaviciix_ebm.cut_size_book_paper": "裁版书纸",
-  "item.timaviciix_ebm.refined_leather_book": "精致皮革书本",
-  "item.timaviciix_ebm.quartz_leather_book": "精致石英书本",
-  "item.timaviciix_ebm.luxurious_gilded_book": "精致金边书本",
-  "item.timaviciix_ebm.quartz_gilded_book": "石晶金边书本",
-  "item.timaviciix_ebm.sturdy_obsidian_gilded_book": "曜石金边书本",
-  "item.timaviciix_ebm.majestic_gilded_book": "坤舆金乌书典",
-  "item.timaviciix_ebm.quartz_ruby_encrusted_book": "玛瑙石晶书典",
-  "item.timaviciix_ebm.sapphire_gilded_book": "蓝晶金辉书典",
-  "item.timaviciix_ebm.ruby_gilded_book": "赤宝金辉书典",
-  "item.timaviciix_ebm.golden_bough_forest_book": "金枝密林书册",
-  "item.timaviciix_ebm.crimson_flame_gilded_book": "赤焰金边书册",
+  "block.timaviciix_ebm.classic_journal_book": "经典期刊本",
+  "block.timaviciix_ebm.cut_size_book_paper": "裁版书纸",
+  "block.timaviciix_ebm.refined_leather_book": "精致皮革书本",
+  "block.timaviciix_ebm.quartz_leather_book": "精致石英书本",
+  "block.timaviciix_ebm.luxurious_gilded_book": "精致金边书本",
+  "block.timaviciix_ebm.quartz_gilded_book": "石晶金边书本",
+  "block.timaviciix_ebm.sturdy_obsidian_gilded_book": "曜石金边书本",
+  "block.timaviciix_ebm.majestic_gilded_book": "坤舆金乌书典",
+  "block.timaviciix_ebm.quartz_ruby_encrusted_book": "玛瑙石晶书典",
+  "block.timaviciix_ebm.sapphire_gilded_book": "蓝晶金辉书典",
+  "block.timaviciix_ebm.ruby_gilded_book": "赤宝金辉书典",
+  "block.timaviciix_ebm.golden_bough_forest_book": "金枝密林书册",
+  "block.timaviciix_ebm.crimson_flame_gilded_book": "赤焰金边书册",
   "item.timaviciix_ebm.refined_leather_bookcase": "精致皮革书套",
   "item.timaviciix_ebm.quartz_leather_bookcase": "精致石英书套",
   "item.timaviciix_ebm.luxurious_gilded_bookcase": "精致金边书套",
