--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -34,9 +34,10 @@
   "item.timaviciix_ebm.ink_box": "Ink Box",
   "item.timaviciix_ebm.toner_cartridge": "Toner Cartridge",
   "item.timaviciix_ebm.blue_cat_pendant": "Blue Cat Pendant",
-  "item.timaviciix_ebm.european_style_ceramic_tea_set": "European Style Ceramic Tea Set",
+  "block.timaviciix_ebm.european_style_ceramic_tea_set": "European Style Ceramic Tea Set",
   "item.timaviciix_ebm.feather_duster": "Feather Duster",
-  "item.timaviciix_ebm.feather_duster_desc": "Get Down!!!",
+  "item.timaviciix_ebm.inverted_feather_duster": "&%@(*@#$(Trouble Maker)",
+  "item.timaviciix_ebm.inverted_feather_duster_desc": "Get Down!!!",
   "message.timaviciix_ebm.feather_duster": "Only Dust It?",
   "sound.timaviciix_ebm.whip_swhoo": "Feather Duster Swing!!!",
   "sound.timaviciix_ebm.whip_crack": "Feather Duster Attacked!!!"
