加入了Gecko动画库，存在geo版本问题，贴图存在部分乱序问题

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -33,7 +33,7 @@
   "item.timaviciix_ebm.copier_body": "Copier Body",
   "item.timaviciix_ebm.ink_box": "Ink Box",
   "item.timaviciix_ebm.toner_cartridge": "Toner Cartridge",
-  "item.timaviciix_ebm.blue_cat_pendant": "Blue Cat Pendant",
+  "block.timaviciix_ebm.blue_cat_pendant": "Blue Cat Pendant",
   "block.timaviciix_ebm.european_style_ceramic_tea_set": "European Style Ceramic Tea Set",
   "item.timaviciix_ebm.feather_duster": "Feather Duster",
   "item.timaviciix_ebm.inverted_feather_duster": "&%@(*@#$(Trouble Maker)",
