--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -33,7 +33,7 @@
   "item.timaviciix_ebm.copier_body": "复印机体",
   "item.timaviciix_ebm.ink_box": "碳粉瓶",
   "item.timaviciix_ebm.toner_cartridge": "硒鼓",
-  "item.timaviciix_ebm.blue_cat_pendant": "蓝色猫猫铃",
+  "block.timaviciix_ebm.blue_cat_pendant": "蓝色猫猫铃",
   "block.timaviciix_ebm.european_style_ceramic_tea_set": "欧式陶瓷茶具套装",
   "item.timaviciix_ebm.feather_duster": "鸡毛掸子",
   "item.timaviciix_ebm.inverted_feather_duster": "&%@(*@#$(对熊孩子宝具)",
