--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -28,17 +28,20 @@
   "block.timaviciix_ebm.portable_copier": "Portable Copier",
   "block.timaviciix_ebm.vertical_copier": "Vertical Copier",
   "item.timaviciix_ebm.binding_machine": "Binding Machine",
-  "item.timaviciix_ebm.librarian_desk": "Librarian Desk",
+  "block.timaviciix_ebm.librarian_desk": "Librarian Desk",
   "item.timaviciix_ebm.stamping_desk": "Stamping Desk",
   "item.timaviciix_ebm.copier_body": "Copier Body",
   "item.timaviciix_ebm.ink_box": "Ink Box",
   "item.timaviciix_ebm.toner_cartridge": "Toner Cartridge",
   "block.timaviciix_ebm.blue_cat_pendant": "Blue Cat Pendant",
+  "item.timaviciix_ebm.blue_cat_pendant_desc": "Hey diddle diddle,The cat and the fiddle",
   "block.timaviciix_ebm.european_style_ceramic_tea_set": "European Style Ceramic Tea Set",
   "item.timaviciix_ebm.feather_duster": "Feather Duster",
   "item.timaviciix_ebm.inverted_feather_duster": "&%@(*@#$(Trouble Maker)",
   "item.timaviciix_ebm.inverted_feather_duster_desc": "Get Down!!!",
   "message.timaviciix_ebm.feather_duster": "Only Dust It?",
   "sound.timaviciix_ebm.whip_swhoo": "Feather Duster Swing!!!",
-  "sound.timaviciix_ebm.whip_crack": "Feather Duster Attacked!!!"
+  "sound.timaviciix_ebm.whip_crack": "Feather Duster Attacked!!!",
+  "sound.timaviciix_ebm.bell_wind_swing": "Bell swinging",
+  "sound.timaviciix_ebm.bell_ling": "Bell Ling!"
 }
