--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -28,17 +28,20 @@
   "block.timaviciix_ebm.portable_copier": "便携复印机",
   "block.timaviciix_ebm.vertical_copier": "立式复印机",
   "item.timaviciix_ebm.binding_machine": "装订器",
-  "item.timaviciix_ebm.librarian_desk": "图书管理员的书桌",
+  "block.timaviciix_ebm.librarian_desk": "图书管理员的书桌",
   "item.timaviciix_ebm.stamping_desk": "签章台",
   "item.timaviciix_ebm.copier_body": "复印机体",
   "item.timaviciix_ebm.ink_box": "碳粉瓶",
   "item.timaviciix_ebm.toner_cartridge": "硒鼓",
-  "block.timaviciix_ebm.blue_cat_pendant": "蓝色猫猫铃",
+  "block.timaviciix_ebm.blue_cat_pendant": "夜之饕宴",
+  "item.timaviciix_ebm.blue_cat_pendant_desc": "Hey diddle diddle,The cat and the fiddle",
   "block.timaviciix_ebm.european_style_ceramic_tea_set": "欧式陶瓷茶具套装",
   "item.timaviciix_ebm.feather_duster": "鸡毛掸子",
   "item.timaviciix_ebm.inverted_feather_duster": "&%@(*@#$(对熊孩子宝具)",
   "item.timaviciix_ebm.inverted_feather_duster_desc": "抱头蹲防!!!",
   "message.timaviciix_ebm.feather_duster": "Ta不是熊孩子!!!",
   "sound.timaviciix_ebm.whip_swhoo": "鸡毛掸子挥动声",
-  "sound.timaviciix_ebm.whip_crack": "鸡毛掸子命中声"
+  "sound.timaviciix_ebm.whip_crack": "鸡毛掸子命中声",
+  "sound.timaviciix_ebm.bell_wind_swing": "猫铃声",
+  "sound.timaviciix_ebm.bell_ling": "猫铃响"
 }
