--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -27,7 +27,7 @@
   "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "Crimson Flame Gilded Bookcase",
   "block.timaviciix_ebm.portable_copier": "Portable Copier",
   "block.timaviciix_ebm.vertical_copier": "Vertical Copier",
-  "item.timaviciix_ebm.binding_machine": "Binding Machine",
+  "block.timaviciix_ebm.binding_machine": "Binding Machine",
   "block.timaviciix_ebm.librarian_desk": "Librarian Desk",
   "item.timaviciix_ebm.stamping_desk": "Stamping Desk",
   "item.timaviciix_ebm.copier_body": "Copier Body",
