基本工作台建模完成

--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -29,13 +29,16 @@
   "block.timaviciix_ebm.vertical_copier": "立式复印机",
   "block.timaviciix_ebm.binding_machine": "装订器",
   "block.timaviciix_ebm.librarian_desk": "图书管理员的书桌",
-  "item.timaviciix_ebm.stamping_desk": "签章台",
+  "block.timaviciix_ebm.librarian_desk_desc": "图书管理进行中!",
+  "block.timaviciix_ebm.stamping_desk": "签章台",
+  "block.timaviciix_ebm.stamping_desk_desc": "版权之路从这儿开始!",
   "item.timaviciix_ebm.copier_body": "复印机体",
   "item.timaviciix_ebm.ink_box": "碳粉瓶",
   "item.timaviciix_ebm.toner_cartridge": "硒鼓",
   "block.timaviciix_ebm.blue_cat_pendant": "夜之饕宴",
-  "item.timaviciix_ebm.blue_cat_pendant_desc": "Hey diddle diddle,The cat and the fiddle",
+  "block.timaviciix_ebm.blue_cat_pendant_desc": "Hey diddle diddle,The cat and the fiddle",
   "block.timaviciix_ebm.european_style_ceramic_tea_set": "欧式陶瓷茶具套装",
+  "block.timaviciix_ebm.european_style_ceramic_tea_set_desc": "等等，你用的是谁的茶具",
   "item.timaviciix_ebm.feather_duster": "鸡毛掸子",
   "item.timaviciix_ebm.inverted_feather_duster": "&%@(*@#$(对熊孩子宝具)",
   "item.timaviciix_ebm.inverted_feather_duster_desc": "抱头蹲防!!!",
