--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -29,13 +29,16 @@
   "block.timaviciix_ebm.vertical_copier": "Vertical Copier",
   "block.timaviciix_ebm.binding_machine": "Binding Machine",
   "block.timaviciix_ebm.librarian_desk": "Librarian Desk",
-  "item.timaviciix_ebm.stamping_desk": "Stamping Desk",
+  "block.timaviciix_ebm.librarian_desk_desc": "Librarianship in progress!",
+  "block.timaviciix_ebm.stamping_desk": "Stamping Desk",
+  "block.timaviciix_ebm.stamping_desk_desc": "The road to copyright starts here!",
   "item.timaviciix_ebm.copier_body": "Copier Body",
   "item.timaviciix_ebm.ink_box": "Ink Box",
   "item.timaviciix_ebm.toner_cartridge": "Toner Cartridge",
   "block.timaviciix_ebm.blue_cat_pendant": "Blue Cat Pendant",
-  "item.timaviciix_ebm.blue_cat_pendant_desc": "Hey diddle diddle,The cat and the fiddle",
+  "block.timaviciix_ebm.blue_cat_pendant_desc": "Hey diddle diddle,The cat and the fiddle",
   "block.timaviciix_ebm.european_style_ceramic_tea_set": "European Style Ceramic Tea Set",
+  "block.timaviciix_ebm.european_style_ceramic_tea_set_desc": "Wait，whose Tea Set are you using?",
   "item.timaviciix_ebm.feather_duster": "Feather Duster",
   "item.timaviciix_ebm.inverted_feather_duster": "&%@(*@#$(Trouble Maker)",
   "item.timaviciix_ebm.inverted_feather_duster_desc": "Get Down!!!",
