--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -54,5 +54,6 @@
   "item.timaviciix_ebm.penguin_helmet_desc": "有一股淡淡的欧式香水气味,以及神秘的魔女气息",
   "item.timaviciix_ebm.penguin_chestplate_desc": "宽松的玩偶服装",
   "item.timaviciix_ebm.penguin_leggings_desc": "可有可无的玩偶裤子(其目的是为了掩盖穿模的事实)",
-  "item.timaviciix_ebm.penguin_boots_desc": "宽大的玩偶鞋，是模仿的企鹅脚掌"
+  "item.timaviciix_ebm.penguin_boots_desc": "宽大的玩偶鞋，是模仿的企鹅脚掌",
+  "state.timaviciix_ebm.reading_state": "阅读中..."
 }
