阅读同步机制完善，正在建立阅读UI

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -55,5 +55,6 @@
   "item.timaviciix_ebm.penguin_chestplate_desc": "Loose fitting cloth doll clothes.",
   "item.timaviciix_ebm.penguin_leggings_desc": "Disposable doll trousers (whose purpose is to hide the fact that they wear moulds)",
   "item.timaviciix_ebm.penguin_boots_desc": "Wide doll shoes.",
-  "state.timaviciix_ebm.reading_state": "Reading..."
+  "state.timaviciix_ebm.reading_state": "Reading...",
+  "text.timaviciix_ebm.example_display": ["owo-lib的较高社区支持主要体现在以下几个方面: \n1. 活跃的 GitHub 讨论和提交 源代码维护: owo-lib 在 GitHub 上有一个活跃的代码库，开发者和贡献者定期提交更新和修复。社区成员可以通过 Pull Requests 提交 bug 修复、功能增强或改进建议。 问题追踪 (Issue Tracking): owo-lib 的 GitHub 页面有大量的开放式和已解决的 Issues，涵盖了各种 bug 报告、功能请求和讨论。通过 Issue，开发者可以轻松查找常见问题的解决方案，也能看到其他开发者的解决方法。\n2. 社区支持的文档和教程 官方文档: owo-lib 提供了一些详细的文档来帮助开发者理解和使用它的功能。这些文档覆盖了常见的 UI 构建方法、常见问题解答以及高级功能的使用。"]
 }
