正在开发存储机制、连带绑定机制

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -55,5 +55,9 @@
   "item.timaviciix_ebm.penguin_chestplate_desc": "Loose fitting cloth doll clothes.",
   "item.timaviciix_ebm.penguin_leggings_desc": "Disposable doll trousers (whose purpose is to hide the fact that they wear moulds)",
   "item.timaviciix_ebm.penguin_boots_desc": "Wide doll shoes.",
-  "state.timaviciix_ebm.reading_state": "Reading..."
-  }
+  "state.timaviciix_ebm.reading_state": "Reading...",
+  "gui.timaviciix_ebm.book_name": "Book Name:",
+  "gui.timaviciix_ebm.book_author_name": "Author Name:",
+  "gui.timaviciix_ebm.save_btn": "Save",
+  "gui.timaviciix_ebm.previous_btn": "Previous"
+}
