--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -59,5 +59,12 @@
   "gui.timaviciix_ebm.book_name": "Book Name:",
   "gui.timaviciix_ebm.book_author_name": "Author Name:",
   "gui.timaviciix_ebm.save_btn": "Save",
-  "gui.timaviciix_ebm.previous_btn": "Previous"
+  "gui.timaviciix_ebm.previous_btn": "Previous",
+  "tips.timaviciix_ebm.tips_desc_1": "Click me to hide or show ~",
+  "tips.timaviciix_ebm.tips_desc_2": "The book will be automatically saved after each page flip during editing!",
+  "tips.timaviciix_ebm.tips_desc_3": "Use “$chapter:” to specify the automatic table of contents.",
+  "tips.timaviciix_ebm.tips_desc_4": "In editing mode, click the title in the top-left corner to change the book's name.",
+  "tips.timaviciix_ebm.tips_desc_5": "Between the pages await wealth untold; Within the lines dwell beauties of old.",
+  "tips.timaviciix_ebm.tips_desc_6": "Exiting editing mode will automatically save your changes~.",
+  "tips.timaviciix_ebm.tips_desc_7": "Closing the reader will automatically save your bookmark."
 }
