解决了书本重命名以及tooltip信息展示问题

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -25,6 +25,10 @@
   "item.timaviciix_ebm.ruby_gilded_bookcase": "Ruby Gilded Bookcase",
   "item.timaviciix_ebm.golden_bough_forest_bookcase": "Golden Bough Forest Bookcase",
   "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "Crimson Flame Gilded Bookcase",
+  "item.timaviciix_ebm.book_display_type_0": "Magazine",
+  "item.timaviciix_ebm.book_display_type_1": "Book",
+  "item.timaviciix_ebm.book_display_type_2": "Volume",
+  "item.timaviciix_ebm.book_display_type_3": "Classic",
   "block.timaviciix_ebm.portable_copier": "Portable Copier",
   "block.timaviciix_ebm.vertical_copier": "Vertical Copier",
   "block.timaviciix_ebm.binding_machine": "Binding Machine",
@@ -67,6 +71,15 @@
   "tips.timaviciix_ebm.tips_desc_5": "Between the pages await wealth untold; Within the lines dwell beauties of old.",
   "tips.timaviciix_ebm.tips_desc_6": "Exiting editing mode will automatically save your changes~.",
   "tips.timaviciix_ebm.tips_desc_7": "Closing the reader will automatically save your bookmark.",
+  "tooltip.timaviciix_ebm.hold_shift": "Hold Shift for Details",
+  "tooltip.timaviciix_ebm.book_author": "Author",
+  "tooltip.timaviciix_ebm.book_editor": "Editor",
+  "tooltip.timaviciix_ebm.book_page_count": "PageCount",
+  "tooltip.timaviciix_ebm.book_tag": "BookTag",
+  "tooltip.timaviciix_ebm.book_is_copies": "Copies",
+  "tooltip.timaviciix_ebm.book_is_manuscript": "Manuscript",
+  "tooltip.timaviciix_ebm.book_stamped": "Stamped",
+  "tooltip.timaviciix_ebm.book_draft": "Draft",
   "data.timaviciix_ebm.book_name_unknown": "Unnamed Book",
   "data.timaviciix_ebm.author_name_unknown": "Unknown Author"
 }
