--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -25,6 +25,10 @@
   "item.timaviciix_ebm.ruby_gilded_bookcase": "赤宝金辉书壳",
   "item.timaviciix_ebm.golden_bough_forest_bookcase": "金枝密林书皮",
   "item.timaviciix_ebm.crimson_flame_gilded_bookcase": "赤焰金边书皮",
+  "item.timaviciix_ebm.book_display_type_0": "杂志",
+  "item.timaviciix_ebm.book_display_type_1": "书本",
+  "item.timaviciix_ebm.book_display_type_2": "书册",
+  "item.timaviciix_ebm.book_display_type_3": "书典",
   "block.timaviciix_ebm.portable_copier": "便携复印机",
   "block.timaviciix_ebm.vertical_copier": "立式复印机",
   "block.timaviciix_ebm.binding_machine": "装订器",
@@ -67,6 +71,15 @@
   "tips.timaviciix_ebm.tips_desc_5": "书中自有颜如玉，书中自有黄金屋",
   "tips.timaviciix_ebm.tips_desc_6": "编辑状态下退出会自动保存哦~",
   "tips.timaviciix_ebm.tips_desc_7": "关闭阅读会自动保存书签",
+  "tooltip.timaviciix_ebm.hold_shift": "按下Shift查看更多",
+  "tooltip.timaviciix_ebm.book_author": "作者",
+  "tooltip.timaviciix_ebm.book_editor": "编者",
+  "tooltip.timaviciix_ebm.book_page_count": "页数",
+  "tooltip.timaviciix_ebm.book_tag": "书签",
+  "tooltip.timaviciix_ebm.book_is_copies": "复印件",
+  "tooltip.timaviciix_ebm.book_is_manuscript": "原稿",
+  "tooltip.timaviciix_ebm.book_stamped": "已签章",
+  "tooltip.timaviciix_ebm.book_draft": "未签章",
   "data.timaviciix_ebm.book_name_unknown": "未命名",
   "data.timaviciix_ebm.author_name_unknown": "佚名"
 }
