异步网络模块测试成功

--- a/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/en_us.json
@@ -83,5 +83,9 @@
   "tooltip.timaviciix_ebm.book_draft": "Draft",
   "tooltip.timaviciix_ebm.book_blank_data": "This book hasn't been edited.",
   "data.timaviciix_ebm.book_name_unknown": "Unnamed Book",
-  "data.timaviciix_ebm.author_name_unknown": "Unknown Author"
+  "data.timaviciix_ebm.author_name_unknown": "Unknown Author",
+  "notice.timaviciix_ebm.save_success": "Save Success",
+  "notice.timaviciix_ebm.save_failed": "Save Failed",
+  "notice.timaviciix_ebm.save_wait": "Please Wait For a Moment.",
+  "notice.timaviciix_ebm.info_un_open": "Function not available yet,Please look forward to!"
 }
