--- a/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
+++ b/src/main/resources/assets/timaviciix_ebm/lang/zh_cn.json
@@ -86,6 +86,7 @@
   "data.timaviciix_ebm.author_name_unknown": "佚名",
   "notice.timaviciix_ebm.save_success": "保存成功",
   "notice.timaviciix_ebm.save_failed": "保存失败",
+  "notice.timaviciix_ebm.save_timeout": "保存超时",
   "notice.timaviciix_ebm.save_wait": "请稍等片刻后上传!",
   "notice.timaviciix_ebm.info_un_open": "功能未开放,敬请期待!"
 }
